Schedule data, UI updates

--- a/ScheduleApp/SchedulePage.xaml
+++ b/ScheduleApp/SchedulePage.xaml
@@ -6,16 +6,26 @@
     <ScrollView>
         <VerticalStackLayout
             Padding ="50,100,50,50">
+            <Grid ColumnDefinitions="*,*,*,*,*,*">
+                <Label Grid.Column="0" Text="Event" FontSize="32" TextColor="Black"/>
+                <Label Grid.Column="1" Text="Location" FontSize="32" TextColor="Black"/>
+                <Label Grid.Column="2" Text="Date" FontSize="32" TextColor="Black"/>
+                <Label Grid.Column="3" Text="Start" FontSize="32" TextColor="Black"/>
+                <Label Grid.Column="4" Text="End" FontSize="32" TextColor="Black"/>
+                <Label Grid.Column="5" Text="Delete Event" FontSize="32" TextColor="Black"/>
+            </Grid>
             <CollectionView x:Name="eventList">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid RowDefinitions="50, *"
-                              ColumnDefinitions="*,*,*,*,*">
-                            <Label Grid.Column="0" Text="{Binding EventName}" FontSize="32" TextColor="Black"/>
+                        <Grid RowDefinitions="*,*, *"
+                              ColumnDefinitions="*,*,*,*,*,*">
+                            
+                                <Label Grid.Column="0" Text="{Binding EventName}" FontSize="32" TextColor="Black"/>
                             <Label Grid.Column="1" Text="{Binding EventLocation}" FontSize="32" TextColor="Black"/>
-                            <Label Grid.Column="2" Text="{Binding StartDate, StringFormat='{0:d}'}" FontSize="32" TextColor="Black"/>
-                            <Label Grid.Column="3" Text="{Binding EndDate, StringFormat='{0:d}'}" FontSize="32" TextColor="Black"/>
-                            <Button Grid.Column="4" Text="Delete"
+                            <Label Grid.Column="2" Text="{Binding Date, StringFormat='{0:d}'}" FontSize="32" TextColor="Black"/>
+                            <Label Grid.Column="3" Text="{Binding StartTime, StringFormat='{0:d}'}" FontSize="32" TextColor="Black"/>
+                            <Label Grid.Column="4" Text="{Binding EndTime, StringFormat='{0:d}'}" FontSize="32" TextColor="Black"/>
+                            <Button Grid.Column="5" Text="Delete"
                                     BindingContext="{Binding Id}"
                                     Clicked="OnDelete" FontSize="32" TextColor="Black" BackgroundColor="DarkOliveGreen"/>
 
