--- a/ScheduleApp/EventPage.xaml
+++ b/ScheduleApp/EventPage.xaml
@@ -4,12 +4,19 @@
              x:Class="ScheduleApp.EventPage"
              Title="EventPage">
     <VerticalStackLayout
-        Padding="100"
         Spacing="25">
+
+        <Label
+            x:Name="EventSubmittedLabel"
+            TextColor="White"
+            Text=" "
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            FontSize="50"/>
 
         <VerticalStackLayout
             x:Name="EventArea"
-            Spacing="10">
+            Spacing="25">
 
             <Label 
                 x:Name="MainLabel"
@@ -17,45 +24,95 @@
                 TextColor="White"
                 VerticalOptions="Center" 
                 HorizontalOptions="Center"
-                FontSize="80"/>
-
-            <Entry 
-                x:Name="EventNameEntry"
-                Placeholder="Name"
-                TextColor="Black"
-                HorizontalOptions="Center"
-                BackgroundColor="White"
-                FontSize="30"/>
-            <Entry 
-                x:Name="EventLocationEntry"
-                Placeholder="Location"
-                TextColor="Black"
-                HorizontalOptions="Center"
-                BackgroundColor="White"
-                FontSize="30"/>
-            <Label 
-                x:Name="StartDateLabel"
-                Text="Start Date:"
-                TextColor="Black"
-                HorizontalOptions="Center"
-                BackgroundColor="White"
-                FontSize="25"/>
-            <DatePicker
-                x:Name="StartDatePicker"
-                HorizontalOptions="Center"/>
-            <Label
-                x:Name="EndDateLabel"
-                Text="End Date:"
-                TextColor="Black"
-                HorizontalOptions="Center"
-                BackgroundColor="White"
-                FontSize="25"/>
-            <DatePicker
-                x:Name="EndDatePicker"
-                HorizontalOptions="Center"/>
-
-                <Button 
+                FontSize="50"/>
+            
+            <Grid RowDefinitions = "*,*,*,*,*" 
+                  ColumnDefinitions= "*,*"
+                  RowSpacing="5"
+                  Padding="10">
+                <Label
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Text="Name:"
+                    TextColor="White"
+                    FontSize="25"
+                    HorizontalOptions="End"
+                    MinimumWidthRequest="150"/>
+                <Entry 
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    x:Name="EventNameEntry"
+                    Placeholder="Event Name"
+                    MinimumWidthRequest="300"
+                    TextColor="Black"
+                    BackgroundColor="White"
+                    FontSize="30"
+                    HorizontalOptions="Start"/>
+                <Label
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Text="Location:"
+                    TextColor="White"
+                    FontSize="25"
+                    HorizontalOptions="End"
+                    MinimumWidthRequest="150"/>
+                <Entry 
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    x:Name="EventLocationEntry"
+                    Placeholder="Location Name"
+                    MinimumWidthRequest="300"
+                    TextColor="Black"
+                    BackgroundColor="White"
+                    FontSize="30"
+                    HorizontalOptions="Start"/>
+                <Label 
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    Text="Date:"
+                    TextColor="White"
+                    FontSize="25"
+                    HorizontalOptions="End"
+                    MinimumWidthRequest="150"/>
+                <DatePicker
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    x:Name="DatePicker"
+                    FontSize="30"
+                    HorizontalOptions="Start"/>
+                <Label
+                    Grid.Row="3"
+                    Grid.Column="0"
+                    Text="Start Time:"
+                    TextColor="White"
+                    FontSize="25"
+                    HorizontalOptions="End"
+                    MinimumWidthRequest="150"
+                    Padding="20"/>
+                <TimePicker
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    x:Name="StartTimePicker"
+                    FontSize="30"
+                    HorizontalOptions="Start"/>
+                <Label
+                    Grid.Row="4"
+                    Grid.Column="0"
+                    Text="End Time:"
+                    TextColor="White"
+                    FontSize="25"
+                    HorizontalOptions="End"
+                    MinimumWidthRequest="150"/>
+                <TimePicker
+                    Grid.Row="4"
+                    Grid.Column="1"
+                    x:Name="EndTimePicker"
+                    FontSize="30"
+                    HorizontalOptions="Start"/>
+            </Grid>
+            <Button 
                 x:Name="SubmitAnswer"
+                WidthRequest="500"
                 Text="Submit"
                 TextColor="Black"
                 Clicked="OnEventSubmitted"
@@ -63,27 +120,14 @@
                 BackgroundColor="DarkOliveGreen"
                 FontSize="35"/>
 
-            <Label
-                x:Name="AnswerLabel"
-                TextColor="Black"
-                VerticalOptions="Center"
-                HorizontalOptions="Center"
-                FontSize="32"/>
-
         </VerticalStackLayout>
 
-        <Label
-            x:Name="EventSubmittedLabel"
-            TextColor="Black"
-            VerticalOptions="Center"
-            HorizontalOptions="Center"
-            FontSize="50"/>
-        
         <Button 
             x:Name="BackToMenuButton"
             Text="Back To Menu"
             TextColor="Black"
             Clicked="OnBackToMenu"
+            VerticalOptions="Center"
             HorizontalOptions="Center"
             BackgroundColor="DarkOliveGreen"
             FontSize="32"
