--- a/ScheduleApp/MainPage.xaml
+++ b/ScheduleApp/MainPage.xaml
@@ -10,29 +10,31 @@
         >
             <Label Text = "My Schedule"
                TextColor="White"
-               FontSize="50"
-               HorizontalOptions="Center"/>
+               FontSize="100"
+               HorizontalOptions="Center"
+               Margin="50"/>
 
             <Grid RowDefinitions ="*, 150" 
               ColumnDefinitions="*,*,*,*">
 
                 <Button Grid.Column="0"
-                        Grid.ColumnSpan="4"
-                        Text="View Schedule"
+                        Grid.ColumnSpan="2"
+                        Text="View Events"
                         TextColor="Black"
                         BackgroundColor="DarkOliveGreen"
                         Clicked="OnViewScheduleChosen"
                         MaximumWidthRequest="600"
+                        MaximumHeightRequest="100"
                         FontSize="60"></Button>
-                <Button Grid.Row="1" 
-                        Grid.ColumnSpan="4" 
+                <Button Grid.Column="2" 
+                        Grid.ColumnSpan="2" 
                         BackgroundColor="DarkOliveGreen" 
                         Text="Add Event"
                         TextColor="Black"
                         Clicked="OnAddEventChosen"
-                        MaximumWidthRequest="400"
-                        MaximumHeightRequest="70"
-                        FontSize="32"></Button>
+                        MaximumWidthRequest="600"
+                        MaximumHeightRequest="100"
+                        FontSize="60"></Button>
             </Grid>
         </VerticalStackLayout>
     </ContentView>
