--- a/ScheduleApp/AddEventPage.xaml
+++ b/ScheduleApp/AddEventPage.xaml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ScheduleApp.EventPage"
-             Title="EventPage">
+             x:Class="ScheduleApp.AddEventPage"
+             Title="">
     <VerticalStackLayout
         Spacing="25">
 
         <Label
             x:Name="EventSubmittedLabel"
-            TextColor="White"
             Text=" "
             VerticalOptions="Center"
             HorizontalOptions="Center"
-            FontSize="50"/>
-
+            FontSize="Large"/>
         <VerticalStackLayout
             x:Name="EventArea"
             Spacing="25">
@@ -21,12 +19,11 @@
             <Label 
                 x:Name="MainLabel"
                 Text="Enter your event details:"
-                TextColor="White"
                 VerticalOptions="Center" 
                 HorizontalOptions="Center"
-                FontSize="50"/>
+                FontSize="Large"/>
             
-            <Grid RowDefinitions = "*,*,*,*,*" 
+            <Grid RowDefinitions = "*,*,*,*,*,*" 
                   ColumnDefinitions= "*,*"
                   RowSpacing="5"
                   Padding="10">
@@ -34,103 +31,104 @@
                     Grid.Row="0"
                     Grid.Column="0"
                     Text="Name:"
-                    TextColor="White"
-                    FontSize="25"
+                    FontSize="Medium"
                     HorizontalOptions="End"
-                    MinimumWidthRequest="150"/>
+                    MinimumWidthRequest="200"/>
                 <Entry 
                     Grid.Row="0"
                     Grid.Column="1"
                     x:Name="EventNameEntry"
                     Placeholder="Event Name"
                     MinimumWidthRequest="300"
-                    TextColor="Black"
-                    BackgroundColor="White"
-                    FontSize="30"
+                    FontSize="Medium"
                     HorizontalOptions="Start"/>
                 <Label
                     Grid.Row="1"
                     Grid.Column="0"
                     Text="Location:"
-                    TextColor="White"
-                    FontSize="25"
+                    FontSize="Medium"
                     HorizontalOptions="End"
-                    MinimumWidthRequest="150"/>
+                    MinimumWidthRequest="200"/>
                 <Entry 
                     Grid.Row="1"
                     Grid.Column="1"
                     x:Name="EventLocationEntry"
                     Placeholder="Location Name"
                     MinimumWidthRequest="300"
-                    TextColor="Black"
-                    BackgroundColor="White"
-                    FontSize="30"
+                    FontSize="Medium"
+                    HorizontalOptions="Start"/>
+                <Label
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    Text="Description:"
+                    FontSize="Medium"
+                    HorizontalOptions="End"
+                    MinimumWidthRequest="200"/>
+                <Entry 
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    x:Name="EventDescriptionEntry"
+                    Placeholder="Optional Description"
+                    MinimumWidthRequest="300"
+                    FontSize="Medium"
                     HorizontalOptions="Start"/>
                 <Label 
-                    Grid.Row="2"
+                    Grid.Row="3"
                     Grid.Column="0"
                     Text="Date:"
-                    TextColor="White"
-                    FontSize="25"
+                    FontSize="Medium"
                     HorizontalOptions="End"
-                    MinimumWidthRequest="150"/>
+                    MinimumWidthRequest="200"/>
                 <DatePicker
-                    Grid.Row="2"
+                    Grid.Row="3"
                     Grid.Column="1"
                     x:Name="DatePicker"
-                    FontSize="30"
+                    FontSize="Medium"
                     HorizontalOptions="Start"/>
                 <Label
-                    Grid.Row="3"
+                    Grid.Row="4"
                     Grid.Column="0"
                     Text="Start Time:"
-                    TextColor="White"
-                    FontSize="25"
+                    FontSize="Medium"
                     HorizontalOptions="End"
-                    MinimumWidthRequest="150"
-                    Padding="20"/>
+                    MinimumWidthRequest="200"
+                    />
                 <TimePicker
-                    Grid.Row="3"
+                    Grid.Row="4"
                     Grid.Column="1"
                     x:Name="StartTimePicker"
-                    FontSize="30"
+                    FontSize="Medium"
                     HorizontalOptions="Start"/>
                 <Label
-                    Grid.Row="4"
+                    Grid.Row="5"
                     Grid.Column="0"
                     Text="End Time:"
-                    TextColor="White"
-                    FontSize="25"
+                    FontSize="Medium"
                     HorizontalOptions="End"
-                    MinimumWidthRequest="150"/>
+                    MinimumWidthRequest="200"/>
                 <TimePicker
-                    Grid.Row="4"
+                    Grid.Row="5"
                     Grid.Column="1"
                     x:Name="EndTimePicker"
-                    FontSize="30"
+                    FontSize="Medium"
                     HorizontalOptions="Start"/>
             </Grid>
             <Button 
                 x:Name="SubmitAnswer"
                 WidthRequest="500"
                 Text="Submit"
-                TextColor="Black"
                 Clicked="OnEventSubmitted"
                 HorizontalOptions="Center"
-                BackgroundColor="DarkOliveGreen"
-                FontSize="35"/>
+                FontSize="Large"/>
 
         </VerticalStackLayout>
 
         <Button 
-            x:Name="BackToMenuButton"
-            Text="Back To Menu"
-            TextColor="Black"
-            Clicked="OnBackToMenu"
+            x:Name="BackToEventPageButton"
+            Text="Back To Event List"
+            Clicked="OnBackToEventListPage"
             VerticalOptions="Center"
             HorizontalOptions="Center"
-            BackgroundColor="DarkOliveGreen"
-            FontSize="32"
-            IsVisible="False"/>
+            FontSize="Large"/>
     </VerticalStackLayout>
 </ContentPage>
